operator/pkg/gateway-api/testdata/gateway/hostNetwork-enabled-tcp-route/input/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcp-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: host-networking
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: tcp-backend-host-networking
          port: 22
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: host-networking
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: tcp
      port: 22
      protocol: TCP
